[tool.poetry]
name = "stomp.py"
version = "6.1.1"
description = "Python STOMP client, supporting versions 1.0, 1.1 and 1.2 of the protocol"
authors = ["Jason R Briggs <jasonrbriggs@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/jasonrbriggs/stomp.py"
documentation = "http://jasonrbriggs.github.io/stomp.py/"
keywords = ["stomp", "messaging", "events", "client"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
]

packages = [
    { include = "stomp" }
]

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pytest-html = "^2.0.1"
pytest-ordering = "^0.6"

[tool.poetry.scripts]
stomp = "stomp.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
