[tool.poetry]
name = "stomp.py"
version = "8.2.0"
description = "Python STOMP client, supporting versions 1.0, 1.1 and 1.2 of the protocol"
authors = ["Jason R Briggs <jasonrbriggs@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/jasonrbriggs/stomp.py"
documentation = "http://jasonrbriggs.github.io/stomp.py/"
keywords = ["stomp", "messaging", "events", "client"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
]

packages = [
    { include = "stomp" }
]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
websocket-client = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
pytest-html = ">=3.2.0"
pytest-ordering = ">=0.6"

[tool.poetry.scripts]
stomp = "stomp.__main__:main"

[tool.poetry_bumpversion.file."stomp/__init__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
